# api_definitions/launchpad/launchpad_api/models/generate_upload_url_post_request.py
@@ -1,0 +1,61 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from launchpad_api.models.base_model import Model
+from launchpad_api import util
+
+
+class GenerateUploadUrlPostRequest(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, data_identifier=None):  # noqa: E501
+        """GenerateUploadUrlPostRequest - a model defined in OpenAPI
+
+        :param data_identifier: The data_identifier of this GenerateUploadUrlPostRequest.  # noqa: E501
+        :type data_identifier: str
+        """
+        self.openapi_types = {
+            'data_identifier': str
+        }
+
+        self.attribute_map = {
+            'data_identifier': 'data_identifier'
+        }
+
+        self._data_identifier = data_identifier
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GenerateUploadUrlPostRequest':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The _generate_upload_url_post_request of this GenerateUploadUrlPostRequest.  # noqa: E501
+        :rtype: GenerateUploadUrlPostRequest
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data_identifier(self) -> str:
+        """Gets the data_identifier of this GenerateUploadUrlPostRequest.
+
+
+        :return: The data_identifier of this GenerateUploadUrlPostRequest.
+        :rtype: str
+        """
+        return self._data_identifier
+
+    @data_identifier.setter
+    def data_identifier(self, data_identifier: str):
+        """Sets the data_identifier of this GenerateUploadUrlPostRequest.
+
+
+        :param data_identifier: The data_identifier of this GenerateUploadUrlPostRequest.
+        :type data_identifier: str
+        """
+
+        self._data_identifier = data_identifier
